Add 'extraEnvs' values to Helm chart
If users of the Helm chart need to provide additional environment
variables to the pod, they can be added to the 'extraEnvs' or
'helmOperator.extraEnvs' arrays in values.yaml, respectively.

--- a/chart/flux/templates/deployment.yaml
+++ b/chart/flux/templates/deployment.yaml
@@ -63,6 +63,9 @@ spec:
           env:
           - name: KUBECONFIG
             value: /root/.kubectl/config
+          {{- if .Values.extraEnvs }}
+{{ toYaml .Values.extraEnvs | indent 10 }}
+          {{- end }}
           args:
           - --ssh-keygen-dir=/var/fluxd/keygen
           - --k8s-secret-name={{ template "flux.fullname" . }}-git-deploy
