Add repositories.yaml to helm-operator image
We want to be able to update the dependencies of a Helm chart. Helm
(whether the client library or the command-line tool) makes it
difficult to do this without also having other equipment, notably the
repositories.yaml file which records aliases and possibly credentials
for Helm repos (e.g., "stable").

This commit adds a default repositories.yaml file to the image,
containing just the conventional location of "stable".

--- a/docker/Dockerfile.helm-operator
+++ b/docker/Dockerfile.helm-operator
@@ -32,6 +32,9 @@ LABEL maintainer="Weaveworks <help@weave.works>" \
 
 ENTRYPOINT [ "/sbin/tini", "--", "helm-operator" ]
 
+ENV HELM_HOME=/var/fluxd/helm
+COPY ./helm-repositories.yaml /var/fluxd/helm/repository/repositories.yaml
+
 COPY ./helm-operator /usr/local/bin/
 
 ARG BUILD_DATE
