Run `helm dep build` with every release
The easiest thing to do is use the Helm binary; since there's no
communication with Tiller involved, there are fewer compatibility
pitfalls (possibly none).

--- a/docker/Dockerfile.helm-operator
+++ b/docker/Dockerfile.helm-operator
@@ -36,6 +36,7 @@ ENTRYPOINT [ "/sbin/tini", "--", "helm-operator" ]
 
 ENV HELM_HOME=/var/fluxd/helm
 COPY ./helm-repositories.yaml /var/fluxd/helm/repository/repositories.yaml
+RUN mkdir -p /var/fluxd/helm/repository/cache/
 
 COPY ./helm-operator /usr/local/bin/
 
