--- a/chart/flux/templates/memcached.yaml
+++ b/chart/flux/templates/memcached.yaml
@@ -26,8 +26,9 @@ spec:
         image: memcached:1.4.25
         imagePullPolicy: IfNotPresent
         args:
-        - -m 64    # Maximum memory to use, in megabytes. 64MB is default.
+        - -m {{ .Values.memcached.max_memory }}    # Maximum memory to use, in megabytes. 64MB is default.
         - -p 11211    # Default port, but being explicit is nice.
+        - -I {{ .Values.memcached.max_item_size }} #  Maximum size for one item
         {{- if .Values.memcached.verbose }}
         - -vv    # This gets us to the level of request logs.
         {{- end }}
