update variable names

--- a/chart/flux/values.yaml
+++ b/chart/flux/values.yaml
@@ -125,8 +125,8 @@ registry:
  
 memcached:
   verbose: false
-  max_item_size: 1m
-  max_memory: 64
+  maxItemSize: 1m
+  maxMemory: 64
 
 ssh:
   # Overrides for git over SSH. If you use your own git server, you
