--- a/chart/flux/templates/deployment.yaml
+++ b/chart/flux/templates/deployment.yaml
@@ -15,6 +15,8 @@ spec:
       release: {{ .Release.Name }}
   template:
     metadata:
+      annotations:
+        prometheus.io.scrape: "true"
       labels:
         app: {{ template "flux.name" . }}
         release: {{ .Release.Name }}
