Add --tiller-tls-hostname configuration flag to Helm operator
Gives the user control over the server name used to verify
the hostname on the returned certificates from Tiller.

--- a/chart/flux/values.yaml
+++ b/chart/flux/values.yaml
@@ -37,6 +37,7 @@ helmOperator:
     keyFile: "tls.key"
     certFile: "tls.crt"
     caContent: ""
+    hostname: ""
   # Override Flux git settings
   git:
     url: ""
