Fixed typo 'tiler' -> 'tiller'

--- a/chart/flux/templates/helm-operator-deployment.yaml
+++ b/chart/flux/templates/helm-operator-deployment.yaml
@@ -99,7 +99,7 @@ spec:
         - --tiller-tls-verify={{ .Values.helmOperator.tls.verify }}
         - --tiller-tls-ca-cert-path=/etc/fluxd/helm-ca/ca.crt
         {{- if .Values.helmOperator.tls.hostname }}
-        - --tiler-tls-hostname={{ .Values.helmOperator.tls.hostname }}
+        - --tiller-tls-hostname={{ .Values.helmOperator.tls.hostname }}
         {{- end }}
         {{- end }}
         {{- end }}
