--- a/deploy-helm/helm-operator-deployment.yaml
+++ b/deploy-helm/helm-operator-deployment.yaml
@@ -17,28 +17,50 @@ spec:
     spec:
       serviceAccount: flux
       volumes:
-      # The following volume is for using customised known_hosts file,
+      # The following volume is for using a customised known_hosts file,
       # which you will need to do if you host your own git repo rather
       # than using github or the like. You'll also need to mount it
       # into the container, below.
-      # You may also wish to provide an ssh_config file as well,
-      # mentioning more than one Identity; for instance, if you're
+      #
+      # You may also wish to provide an ssh_config file,
+      # mentioning more than one `IdentityFile`; for instance, if you're
       # using more than one GitHub repo. NB the entry key should be
-      # "config" if mounted in ~/.ssh/.
+      # "config" rather than "ssh_config" if mounted in ~/.ssh/.
+      #
       # - name: sshdir
       #   configMap:
       #     name: flux-ssh-config
       #     defaultMode: 0400
-      - name: git-key
-        secret:
-          secretName: flux-git-deploy
-          defaultMode: 0400 # when mounted read-only, we won't be able to chmod
+      #
+      # You will need this volume if you're using a git repo that
+      # needs an SSH key for access; e.g., a GitHub deploy key. If
+      # you're using just one such repo, the default ssh_config
+      # already points at /etc/fluxd/ssh/identity as a key. If you
+      # want to use more than one key, you'll need to provide your own
+      # ssh_config above, with an `IdentityFile` entry matching each
+      # key in the secret mentioned here.
+      #
+      # - name: git-key
+      #   secret:
+      #     secretName: flux-git-deploy
+      #     defaultMode: 0400 # when mounted read-only, we won't be able to chmod
+      #
+      # These two volumes are for mounting a repositories.yaml file,
+      # and providing a cache directory. The latter is needed because
+      # mounting the former will make the cache/ directory read-only.
+      #
+      # - name: repositories-yaml
+      #   secret:
+      #     secretName: flux-helm-repositories
+      # - name: repositories-cache
+      #   emptyDir: {}
+
       containers:
       - name: flux-helm-operator
         # There are no ":latest" images for helm-operator. Find the most recent
         # release or image version at https://quay.io/weaveworks/helm-operator
         # and replace the tag here.
-        image: quay.io/weaveworks/helm-operator:0.2.1
+        image: quay.io/weaveworks/helm-operator:0.5.0
         imagePullPolicy: IfNotPresent
         volumeMounts:
         # Include this if you need to mount a customised known_hosts or ssh_config
@@ -46,6 +68,9 @@ spec:
         # - name: sshdir
         #   mountPath: /root/.ssh
         #   readOnly: true
-        - name: git-key
-          mountPath: /etc/fluxd/ssh
-          readOnly: true # this will be the case perforce in K8s >=1.10
+        # - name: git-key
+        #   mountPath: /etc/fluxd/ssh
+        # - name: repositories-yaml
+        #   mountPath: /var/fluxd/helm/repository
+        # - name: repositories-cache
+        #   mountPath: /var/fluxd/helm/repository/cache
