--- a/chart/flux/templates/helm-operator-crd.yaml
+++ b/chart/flux/templates/helm-operator-crd.yaml
@@ -1,5 +1,76 @@
 {{- if .Values.helmOperator.create -}}
 {{- if .Values.helmOperator.createCRD -}}
+---
+apiVersion: apiextensions.k8s.io/v1beta1
+kind: CustomResourceDefinition
+metadata:
+  name: helmreleases.flux.weave.works
+  labels:
+    app: {{ template "flux.name" . }}
+    chart: {{ template "flux.chart" . }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
+  annotations:
+    "helm.sh/hook": crd-install
+spec:
+  group: flux.weave.works
+  names:
+    kind: HelmRelease
+    listKind: HelmReleaseList
+    plural: helmreleases
+    shortNames:
+    - hr
+  scope: Namespaced
+  version: v1beta1
+  versions:
+    - name: v1beta1
+      served: true
+      storage: true
+  validation:
+    openAPIV3Schema:
+      properties:
+        spec:
+          required: ['values', 'chart']
+          properties:
+            releaseName:
+              type: string
+              pattern: "^[a-z0-9]([-a-z0-9]*[a-z0-9])?$"
+            valueFileSecrets:
+              type: array
+              items:
+                type: object
+                required: ['name']
+                properties:
+                  name:
+                    type: string
+            values:
+              type: object
+            chart:
+              oneOf:
+              - required: ['git', 'path']
+                properties:
+                  git:
+                    type: string
+                    format: git # not defined by OAS
+                  path:
+                    type: string
+                  ref:
+                    type: string
+              - required: ['repository', 'name', 'version']
+                properties:
+                  repository:
+                    type: string
+                    format: url # not defined by OAS
+                  name:
+                    type: string
+                  version:
+                    type: string
+                    format: semver # not defined by OAS
+                  chartPullSecret:
+                    properties:
+                      name:
+                        type: string
+---
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
@@ -9,6 +80,8 @@ metadata:
     chart: {{ template "flux.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
+  annotations:
+    "helm.sh/hook": crd-install
 spec:
   group: helm.integrations.flux.weave.works
   names:
