--- a/chart/flux/Chart.yaml
+++ b/chart/flux/Chart.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
-appVersion: "1.8.0"
+appVersion: "1.8.1"
 description: Flux is a tool that automatically ensures that the state of a cluster matches what is specified in version control
 name: flux
-version: 0.5.0-beta
+version: 0.5.0
 home: https://weave.works
 sources:
 - https://github.com/weaveworks/flux
