Use flux-get-started repository everywhere.
  As a followup to #1527, I thought it'd be good to generally
  stop referring to flux-example and go with flux-get-started
  everywhere.

Signed-off-by: Daniel Holbach <daniel@weave.works>

--- a/deploy/flux-deployment.yaml
+++ b/deploy/flux-deployment.yaml
@@ -96,7 +96,7 @@ spec:
         - --ssh-keygen-dir=/var/fluxd/keygen
 
         # replace or remove the following URL
-        - --git-url=git@github.com:weaveworks/flux-example
+        - --git-url=git@github.com:weaveworks/flux-get-started
         - --git-branch=master
 
         # include these next two to connect to an "upstream" service
