--- a/deploy-helm/helm-operator-deployment.yaml
+++ b/deploy-helm/helm-operator-deployment.yaml
@@ -62,6 +62,10 @@ spec:
         # and replace the tag here.
         image: quay.io/weaveworks/helm-operator:0.5.1
         imagePullPolicy: IfNotPresent
+        resources:
+          requests:
+            cpu: 50m
+            memory: 64Mi
         volumeMounts:
         # Include this if you need to mount a customised known_hosts or ssh_config
         # file; you'll also need the volume declared above.
