Prevent CRD deletion on helm delete

--- a/chart/flux/templates/helm-operator-crd.yaml
+++ b/chart/flux/templates/helm-operator-crd.yaml
@@ -10,6 +10,8 @@ metadata:
     chart: {{ template "flux.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
+  annotations:
+    "helm.sh/resource-policy": keep
 spec:
   group: flux.weave.works
   names:
@@ -78,6 +80,8 @@ metadata:
     chart: {{ template "flux.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
+  annotations:
+    "helm.sh/resource-policy": keep
 spec:
   group: helm.integrations.flux.weave.works
   names:
