Make SSH know hosts volume optional - if no know hosts are specified don't create the ConfigMap and the readonly volumes in Flux and helm-op

--- a/chart/flux/templates/helm-operator-deployment.yaml
+++ b/chart/flux/templates/helm-operator-deployment.yaml
@@ -30,10 +30,12 @@ spec:
       serviceAccountName: {{ template "flux.serviceAccountName" . }}
       {{- end }}
       volumes:
+      {{- if .Values.ssh.known_hosts }}
       - name: sshdir
         configMap:
           name: {{ template "flux.fullname" . }}-ssh-config
           defaultMode: 0600
+      {{- end }}
       - name: git-key
         secret:
           {{- if .Values.helmOperator.git.secretName }}
@@ -61,10 +63,12 @@ spec:
         image: "{{ .Values.helmOperator.repository }}:{{ .Values.helmOperator.tag }}"
         imagePullPolicy: {{ .Values.helmOperator.pullPolicy }}
         volumeMounts:
+        {{- if .Values.ssh.known_hosts }}
         - name: sshdir
           mountPath: /root/.ssh/known_hosts
           subPath: known_hosts
           readOnly: true
+        {{- end }}
         - name: git-key
           mountPath: /etc/fluxd/ssh
           readOnly: true
