--- a/chart/flux/templates/deployment.yaml
+++ b/chart/flux/templates/deployment.yaml
@@ -30,10 +30,12 @@ spec:
       - name: kubedir
         configMap:
           name: {{ template "flux.fullname" . }}-kube-config
+      {{- if .Values.ssh.known_hosts }}
       - name: sshdir
         configMap:
           name: {{ template "flux.fullname" . }}-ssh-config
           defaultMode: 0600
+      {{- end }}
       - name: git-key
         secret:
           {{- if .Values.git.secretName }}
@@ -56,9 +58,11 @@ spec:
           volumeMounts:
           - name: kubedir
             mountPath: /root/.kubectl
+          {{- if .Values.ssh.known_hosts }}
           - name: sshdir
             mountPath: /root/.ssh
             readOnly: true
+          {{- end }}
           - name: git-key
             mountPath: /etc/fluxd/ssh
             readOnly: true
