Add Timeout to GitChartSource and integrate in mirror operation

--- a/chart/flux/templates/helm-operator-crd.yaml
+++ b/chart/flux/templates/helm-operator-crd.yaml
@@ -56,6 +56,8 @@ spec:
                     type: string
                   ref:
                     type: string
+                  timeout:
+                    type: int
               - required: ['repository', 'name', 'version']
                 properties:
                   repository:
