--- a/deploy-helm/flux-helm-release-crd.yaml
+++ b/deploy-helm/flux-helm-release-crd.yaml
@@ -47,6 +47,8 @@ spec:
                     type: string
                   ref:
                     type: string
+                  timeout:
+                    type: int
               - required: ['repository', 'name', 'version']
                 properties:
                   repository:
