--- a/chart/flux/Chart.yaml
+++ b/chart/flux/Chart.yaml
@@ -1,8 +1,9 @@
 apiVersion: v1
 appVersion: "1.8.2"
-description: Flux is a tool that automatically ensures that the state of a cluster matches what is specified in version control
-name: flux
 version: 0.5.2
+kubeVersion: ">=1.9.0-0"
+name: flux
+description: Flux is a tool that automatically ensures that the state of a cluster matches what is specified in version control
 home: https://weave.works
 sources:
 - https://github.com/weaveworks/flux
