--- a/chart/flux/templates/helm-tls.yaml
+++ b/chart/flux/templates/helm-tls.yaml
@@ -1,6 +1,4 @@
-{{- if .Values.helmOperator.tls.enable -}}
-{{- if .Values.helmOperator.tls.verify -}}
-{{- if .Values.helmOperator.tls.caContent }}
+{{- if and .Values.helmOperator.tls.enable .Values.helmOperator.tls.verify .Values.helmOperator.tls.caContent -}}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -8,6 +6,4 @@ metadata:
 data:
   ca.crt: |
 {{ .Values.helmOperator.tls.caContent | indent 4 }}
-{{- end -}}
-{{- end -}}
 {{- end -}}
