--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -14,7 +14,7 @@ description: |
   fluxctl talks to your Weave Flux instance and exposes all its
   functionality to an easy to use command line interface.
 grade: devel # must be 'stable' to release into candidate/stable channels
-confinement: classic
+confinement: devmode
 base: core18
 
 parts:
