add comment about simplifying tagged release bits

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -8,6 +8,7 @@ version-script: |
     GIT_REV="$(git rev-parse --short HEAD)"
     echo "$FLUX_TAG+$GIT_REV"
   fi
+  # XXX: Look into https://forum.snapcraft.io/t/selective-checkout-check-out-the-tagged-release-revision-if-it-isnt-promoted-to-the-stable-channel/10617
 version: git
 summary: fluxctl talks to Weave Flux and helps you deploy your code
 description: |
