--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,6 +1,6 @@
 name: fluxctl
 version-script: |
-  FLUX_TAG="$(git tag -l | egrep -v '^(chart-|helm-|master-|pre-split)' | sort -V | tail -n1)"
+  FLUX_TAG="$(git tag -l | egrep -v '^(chart-|helm-|master-|pre-split)' | sort --version-sort | tail -n1)"
   if [ "$SNAPCRAFT_PROJECT_GRADE" = "stable" ]
   then
     echo "$FLUX_TAG"
@@ -8,7 +8,6 @@ version-script: |
     GIT_REV="$(git rev-parse --short HEAD)"
     echo "$FLUX_TAG+$GIT_REV"
   fi
-  # XXX: Look into https://forum.snapcraft.io/t/selective-checkout-check-out-the-tagged-release-revision-if-it-isnt-promoted-to-the-stable-channel/10617
 version: git
 summary: fluxctl talks to Weave Flux and helps you deploy your code
 description: |
