--- a/chart/flux/templates/helm-operator-deployment.yaml
+++ b/chart/flux/templates/helm-operator-deployment.yaml
@@ -41,10 +41,11 @@ spec:
           name: {{ template "flux.fullname" . }}-ssh-config
           defaultMode: 0600
       {{- end }}
-      {{- if .Values.git.config }}
-      - name: gitconfig
-        configMap:
-          name: {{ template "flux.fullname" . }}-gitconfig
+      {{- if .Values.git.config.enabled }}
+      - name: git-config
+        secret:
+          secretName: {{ include "git.config.secretName" . }}
+          defaultMode: 0400
       {{- end }}
       - name: git-key
         secret:
@@ -89,10 +90,10 @@ spec:
           subPath: known_hosts
           readOnly: true
         {{- end }}
-        {{- if .Values.git.config }}
-        - name: gitconfig
+        {{- if .Values.git.config.enabled }}
+        - name: git-config
           mountPath: /root/.gitconfig
-          subPath: .gitconfig
+          subPath: gitconfig
           readOnly: true
         {{- end }}
         - name: git-key
