--- a/chart/flux/values.yaml
+++ b/chart/flux/values.yaml
@@ -138,10 +138,13 @@ git:
   # set the secret name (flux-ssh) below
   secretName: ""
   # Global Git configuration See https://git-scm.com/docs/git-config for more details.
-  config: ""
-  # config: |
-  #   [credential "https://github.com"]
-  #           username = foo
+  config:
+    enabled: false
+    secretName: ""
+    data: ""
+    # data: |
+    #   [credential "https://github.com"]
+    #           username = foo
 
 registry:
   # Period at which to check for updated images
