Allow to enable garbage collection in Helm chart

--- a/chart/flux/templates/deployment.yaml
+++ b/chart/flux/templates/deployment.yaml
@@ -191,6 +191,9 @@ spec:
           - --connect=wss://cloud.weave.works/api/flux
           - --token={{ .Values.token }}
           {{- end }}
+          {{- if .Values.syncGarbageCollection.enabled }}
+          - --sync-garbage-collection={{ .Values.syncGarbageCollection.enabled }}
+          {{- end }}
           {{- if .Values.additionalArgs }}
 {{ toYaml .Values.additionalArgs | indent 10 }}
           {{- end }}
