Mount sub path of repositories secret
To prevent the emptyDir for the repositories cache from overwriting the
repositories.yaml since it's mounted on the same path.
Courtesy of https://blog.sebastian-daschner.com/entries/multiple-kubernetes-volumes-directory

Signed-off-by: Simon Rüegg <simon.ruegg@vshn.ch>

--- a/chart/flux/templates/helm-operator-deployment.yaml
+++ b/chart/flux/templates/helm-operator-deployment.yaml
@@ -111,7 +111,9 @@ spec:
         {{- end }}
         {{- if .Values.helmOperator.configureRepositories.enable }}
         - name: {{ .Values.helmOperator.configureRepositories.volumeName | quote }}
-          mountPath: /var/fluxd/helm/repository
+          mountPath: /var/fluxd/helm/repository/repositories.yaml
+          subPath: repositories.yaml
+          readOnly: true
         - name: {{ .Values.helmOperator.configureRepositories.cacheVolumeName | quote }}
           mountPath: /var/fluxd/helm/repository/cache
         {{- end }}
